--- a/public/packs/manifest.json
+++ b/public/packs/manifest.json
@@ -1,13 +1,23 @@
 {
-  "application.js": "/packs/js/application-b048ebe6c6783007dee3.js",
-  "application.js.map": "/packs/js/application-b048ebe6c6783007dee3.js.map",
+  "application.js": "/packs/js/application-781bad0dc2094227fc54.js",
+  "application.js.map": "/packs/js/application-781bad0dc2094227fc54.js.map",
+  "date_time_picker.js": "/packs/js/date_time_picker-9baea1bb58490cfe8c84.js",
+  "date_time_picker.js.map": "/packs/js/date_time_picker-9baea1bb58490cfe8c84.js.map",
   "entrypoints": {
     "application": {
       "js": [
-        "/packs/js/application-b048ebe6c6783007dee3.js"
+        "/packs/js/application-781bad0dc2094227fc54.js"
       ],
       "js.map": [
-        "/packs/js/application-b048ebe6c6783007dee3.js.map"
+        "/packs/js/application-781bad0dc2094227fc54.js.map"
+      ]
+    },
+    "date_time_picker": {
+      "js": [
+        "/packs/js/date_time_picker-9baea1bb58490cfe8c84.js"
+      ],
+      "js.map": [
+        "/packs/js/date_time_picker-9baea1bb58490cfe8c84.js.map"
       ]
     }
   }
