--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "jquery": "^3.5.1",
     "mapbox-gl": "^1.12.0",
     "moment": "^2.27.0",
+    "node-forge": "^0.10.0",
     "popper.js": "^1.16.1",
     "tempusdominus-bootstrap-4": "^5.1.2",
     "turbolinks": "^5.2.0"
